--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "@qpd-v/mcp-server-ragdocs",
+  "name": "@obviousworks/mcp-server-ragdocs",
   "version": "0.1.6",
   "description": "A Model Context Protocol server for fetching and storing documentation in a vector database, enabling semantic search and retrieval to augment LLM capabilities with relevant documentation context.",
   "private": false,
   "type": "module",
   "bin": {
-    "@qpd-v/mcp-server-ragdocs": "./build/index.js"
+    "mcp-server-ragdocs": "./build/index.js"
   },
   "files": [
     "build",
