--- a/package.json
+++ b/package.json
@@ -1,20 +1,59 @@
 {
-  "name": "mcp-ragdocs",
-  "version": "0.1.0",
+  "name": "@obviousworks/mcp-server-ragdocs",
+  "version": "0.1.6",
+  "description": "A Model Context Protocol server for fetching and storing documentation in a vector database, enabling semantic search and retrieval to augment LLM capabilities with relevant documentation context.",
+  "private": false,
   "type": "module",
-  "main": "build/index.js",
-  "scripts": {
-    "start": "node build/index.js",
-    "build": "tsc"
+  "bin": {
+    "mcp-server-ragdocs": "build/index.js"
   },
+  "files": [
+    "build",
+    "README.md",
+    "LICENSE"
+  ],
+  "scripts": {
+    "build": "tsc",
+    "prepare": "npm run build",
+    "watch": "tsc --watch",
+    "inspector": "npx @modelcontextprotocol/inspector build/index.js",
+    "start": "node build/index.js"
+  },
+  "keywords": [
+    "mcp",
+    "model-context-protocol",
+    "rag",
+    "documentation",
+    "vector-database",
+    "qdrant",
+    "claude",
+    "llm"
+  ],
+  "author": "qpd-v",
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/qpd-v/mcp-server-ragdocs.git"
+  },
+  "bugs": {
+    "url": "https://github.com/qpd-v/mcp-server-ragdocs/issues"
+  },
+  "homepage": "https://github.com/qpd-v/mcp-server-ragdocs#readme",
   "dependencies": {
-    "@modelcontextprotocol/sdk": "^0.1.0",
-    "@qdrant/js-client-rest": "^1.7.1",
-    "playwright": "^1.41.2",
-    "cheerio": "^1.0.0-rc.12",
-    "axios": "^1.6.8"
+    "@modelcontextprotocol/sdk": "0.6.0",
+    "@qdrant/js-client-rest": "^1.8.0",
+    "axios": "^1.7.9",
+    "cheerio": "^1.0.0",
+    "ollama": "^0.5.11",
+    "openai": "^4.76.2",
+    "playwright": "^1.49.1"
   },
   "devDependencies": {
-    "typescript": "^5.4.5"
-  }
+    "@types/node": "^20.17.30",
+    "typescript": "^5.3.3"
+  },
+  "publishConfig": {
+    "access": "public"
+  },
+  "main": "index.js"
 }
