--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "cheerio": "^1.0.0",
     "ollama": "^0.5.11",
     "openai": "^4.76.2",
+    "pdf-parse": "^1.1.1",
     "playwright": "^1.49.1"
   },
   "devDependencies": {
